--- a/style/scss/at/_queries.scss
+++ b/style/scss/at/_queries.scss
@@ -68,9 +68,9 @@
         width: 540px;
         height: 540px;
         border-radius: 50%;
-        top: 105px;
+        top: 50%;
         left: 50%;
-        transform: translate(-50%);
+        transform: translate(-50%, -50%);
         display: flex;
         align-items: end;
         justify-content: center;
@@ -93,7 +93,8 @@
     .bg-spot {
         &::after {
             min-width: 600px;
-            max-width: 895px;
+            max-width: 900px;
+            max-height: 750px;
             background-size: 150%;
             //animation: spotlight 1s;
         }
@@ -182,3 +183,8 @@
     }
 }
 
+@media (min-width: $xlg) and (min-height: 775px) {
+    .panel {
+        height: 100vh;
+    }
+}
